fix header spacing

--- a/src/assets/css/components/intro-section.scss
+++ b/src/assets/css/components/intro-section.scss
@@ -27,6 +27,10 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
+
+  .header {
+    margin-bottom: $spacing-8;
+  }
 }
 
 
